<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageButton
        android:id="@+id/recipe1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:background="@drawable/pumpkin_pie"
        android:contentDescription="@string/recipe1"
        android:cropToPadding="true"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:text="@string/recipe1" />

    <ImageButton
        android:id="@+id/recipe2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:adjustViewBounds="false"
        android:background="@drawable/pumpkin_bread"
        android:contentDescription="@string/recipe2"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:text="@string/recipe2"
        android:padding="15dp"/>

    <ImageButton
        android:id="@+id/recipe3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:background="@drawable/pumpkin_jello"
        android:contentDescription="@string/recipe3"
        android:cropToPadding="true"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:text="@string/recipe3" />

    <ImageButton
        android:id="@+id/recipe4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:background="@drawable/pumpkin_coffee"
        android:contentDescription="@string/recipe4"
        android:cropToPadding="true"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:text="@string/recipe4" />

</LinearLayout>