<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_hint"
            app:srcCompat="@drawable/defaultimage" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:gravity="center"
                    android:text="Title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/ingredients"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="Ingredients" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/steps"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stepsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="24dp"
                    android:text="Steps" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
